# OSSguard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: ai.py  github.py  pypi_npm.py  ws.py
backend/app/schemas/: analysis.py  github.py  pypi_npm.py  ws.py
backend/app/services/: dependency_confusion.py  malware.py  mitre.py  sbom.py  sca.py  typosquatting.py
backend/app/services/ai/: chatbot.py  code_analyzer.py  fix_advisor.py  license_checker.py  llm_sast.py  package_health.py  risk_scorer.py  summarizer.py  upgrade_analyzer.py  vulnerability_prioritizer.py
backend/app/utils/: logging.py  redis_client.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_services.py
backend/tests/benchmark/: benchmark_llm_report.json  benchmark_report.json  quick_llm_test.py  run_before_only.py  run_benchmark.py  run_benchmark_llm.py  run_flask_fp_test.sh  run_llm_curl.sh  run_llm_final.sh  run_typo_benchmark.py
backend/tests/benchmark/fixtures/benign/: base64_legit.py  config_loader.py  data_processor.py  db_models.py  http_client.py  legit_setup.py  math_utils.py  subprocess_legit.py  test_helper.py  web_server.py
backend/tests/benchmark/fixtures/malicious/: backdoor_exec.py  crypto_miner.py  data_exfil.py  env_stealer.py  eval_injection.py  install_hook.py  obfuscated_loader.py  pickle_rce.py  socket_backdoor.py  supply_chain_setup.py
backend/yara_rules/: APT1_malware_signature.yar
docs/: ANALYSIS_PIPELINE.md  (+3 more)
(+49 files in other folders)
